--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@apollo/client": "^3.3.21",
     "@apollo/react-hooks": "^4.0.0",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.5",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link": "^1.2.14",
@@ -24,21 +26,23 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-screens": "^3.4.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@graphql-codegen/cli": "1.21.7",
+    "@graphql-codegen/introspection": "1.18.2",
+    "@graphql-codegen/typescript": "1.23.0",
+    "@graphql-codegen/typescript-operations": "1.18.4",
+    "@graphql-codegen/typescript-react-apollo": "2.3.1",
     "@types/graphql": "^14.5.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@types/react-native-vector-icons": "^6.4.8",
-    "typescript": "~4.0.0",
-    "@graphql-codegen/typescript": "1.23.0",
-    "@graphql-codegen/typescript-react-apollo": "2.3.1",
-    "@graphql-codegen/typescript-operations": "1.18.4",
-    "@graphql-codegen/introspection": "1.18.2"
+    "typescript": "~4.0.0"
   },
   "private": true
 }
