--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link": "^1.2.14",
+    "apollo-link-error": "^1.1.13",
     "apollo-link-rest": "^0.8.0-beta.0",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
